fixed spacing

--- a/src/components/Greeter/greeter.module.css
+++ b/src/components/Greeter/greeter.module.css
@@ -5,4 +5,6 @@
   font-size: 18px;
   line-height: 155.2%;
   letter-spacing: 0.3em;
+  margin: 0;
+  margin-bottom: 5vh;
 }
